--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,10 @@
     <div id="container">
         <div id="post">
             <h1>Este es el titulo del post</h1>
-            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas 
+                increibles que se pueden hacer con ramas</p>
+            <p>Página web, generalmente de carácter personal, con una estructura cronológica que se actualiza 
+            regularmente y que se suele dedicar a tratar un tema concreto.</p>
         </div>
     </div>
 </body>
