modificaciones de la rama master, agregue subsscripcion y color azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
         <div id="cabecera">
             HyperBlog 
             <span id="tagline">
-                Tu blog de confianza
+                Tu blog de master
             </span>
         </div>
         <div id="post">
@@ -19,6 +19,7 @@
                 increibles que se pueden hacer con ramas</p>
             <p>Página web, generalmente de carácter personal, con una estructura cronológica que se actualiza 
             regularmente y que se suele dedicar a tratar un tema concreto.</p>
+            <p>suscribete y dale like</p>
         </div>
     </div>
 </body>
