color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imagenes/dragon.png"/>
             HyperBlog 
             <span id="tagline">
                 Tu blog de cabecera
@@ -15,11 +16,17 @@
         </div>
         <div id="post">
             <h1>Este es el titulo del post</h1>
-            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas 
-                increibles que se pueden hacer con ramas</p>
-            <p>Página web, generalmente de carácter personal, con una estructura cronológica que se actualiza 
-            regularmente y que se suele dedicar a tratar un tema concreto.</p>
-            <p>suscribete y dale like</p>
+            <p>
+                Y este es el parrafo de inicio donde vamos a explicar las cosas 
+                increibles que se pueden hacer con ramas
+            </p>
+            <p>
+                Página web, generalmente de carácter personal, con una estructura cronológica que se actualiza 
+                regularmente y que se suele dedicar a tratar un tema concreto.
+            </p>
+            <p>
+                suscribete y dale like
+            </p>
         </div>
     </div>
 </body>
