--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,9 @@
             regularmente y que se suele dedicar a tratar un tema concreto.</p>
             <p>suscribete y dale like</p>
         </div>
+        <div id="footer">
+            Hecho con amor en platzi
+        </div>
     </div>
 </body>
 </html>
