agregue una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,7 @@
                 Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas 
                 incre&iacute;bles que se pueden hacer con ramas.
             </p>
+            <p><img src="imagenes/equipo.jpg" width="50%" alt=""></p>
             <p>
                 Página web, generalmente de carácter personal, con una estructura cronológica que se actualiza 
                 regularmente y que se suele dedicar a tratar un tema concreto.
